--- a/app/src/main/res/layout/fragment_shared_diary.xml
+++ b/app/src/main/res/layout/fragment_shared_diary.xml
@@ -6,17 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.sharedDiary.SharedDiaryFragment">
 
-    <TextView
-        android:id="@+id/text_shared_diary"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:orientation="vertical">
+
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:mcv_selectionColor="#a9dbf0cb"
+            app:mcv_showOtherDates="defaults" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
